# scapegoat

./: Main.hs  global.lua  render_svg.hs  rules.txt  scapegoat-images.cabal  scapegoat-renderer.cabal  svg_to_png.sh  svgtopng.sh  topng.sh
raw-assets/: turnsteps.pxd
scapegoat-renderer/: Main.hs
tts-dist/lua/: global.lua
