cabal-version:      >=1.10

name:               scapegoat-renderer
version:            0.1.0.0
build-type:         Simple
extra-source-files: CHANGELOG.md

executable hs
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
      base              >=4.13 && <4.15
    , colour
    , diagrams-contrib
    , diagrams-core
    , diagrams-lib
    , diagrams-svg

  -- hs-source-dirs:
  default-language: Haskell2010
